data/derived/comb/progs/unify/prog5786.ml.out
Characters 258-262:
  let (_, res) = List.fold_left f base args in 
                                  ^^^^
Error: This expression has type (int * int) * 'a list
       but an expression was expected of type int * int list
       Type int * int is not compatible with type int 
